# serializer version: 1
# name: test_entities[cover.basement_covername-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.basement_covername',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CoverName',
    'platform': 'velbus',
    'previous_unique_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '1234-9',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.basement_covername-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 50,
      'friendly_name': 'Basement CoverName',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.basement_covername',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_entities[cover.basement_covernamenopos-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.basement_covernamenopos',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CoverNameNoPos',
    'platform': 'velbus',
    'previous_unique_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': None,
    'unique_id': '12345-11',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.basement_covernamenopos-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assumed_state': True,
      'friendly_name': 'Basement CoverNameNoPos',
      'supported_features': <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.basement_covernamenopos',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'opening',
  })
# ---
